Fix box-shadow not showing bug

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -367,7 +367,7 @@ main {
 .project {
     display: grid;
     grid-template-rows: min-content 1fr;
-    padding: 20px 30px 0;
+    padding: 20px 20px 0;
     overflow: auto;
 }
 
@@ -376,8 +376,7 @@ main {
     grid-template-columns: 1fr min-content;
     align-items: center;
     padding-bottom: 5px;
-    margin-right: 15px;
-    margin-bottom: 15px;
+    margin: 0 15px 15px 15px;
     border-bottom: 2px solid hsl(var(--accent-color));
 }
 
@@ -397,7 +396,7 @@ main {
     grid-template-columns: 1fr;
     grid-auto-rows: min-content;
     row-gap: 15px;
-    padding: 15px 15px 15px 0;
+    padding: 15px;
     overflow: auto;
 }
 
